<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".login.LoginActivity">

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="18sp"
        android:layout_marginRight="18sp"
        android:background="@color/white"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/padding">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:layout_marginTop="25dp"
            android:src="@drawable/applogo" />


        <EditText
            android:id="@+id/edtPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:hint="Phone number"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:textSize="16sp" />


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp">

            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Password"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textSize="16sp" />


        </RelativeLayout>


        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:background="@color/colorBtnRed"
            android:text="Login"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/txtForgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/topMargin"
            android:layout_marginBottom="@dimen/topMargin"
            android:text="@string/forgot"
            android:textColor="@color/colorBtnRed"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginRight="@dimen/margin"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dont"
                android:textColor="@color/black"
                android:textSize="@dimen/text" />

            <TextView
                android:id="@+id/txtSignup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:paddingTop="@dimen/padding"
                android:paddingRight="@dimen/padding"
                android:paddingBottom="@dimen/padding"
                android:text="@string/signup"
                android:textColor="@color/colorBtnRed"
                android:textSize="@dimen/text"
                android:textStyle="bold" />


        </LinearLayout>


    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp">

        <LinearLayout
            android:id="@+id/layout_tremcondition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:id="@+id/tv_bylogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="By Login you are agerring to the"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_term_condition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@+id/tv_bylogin"
                android:text="@string/term_amp_condition"
                android:textColor="@color/colorBtnRed"
                android:textSize="12sp"
                android:textStyle="bold" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_tremcondition"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/tv_andthe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="and the"
                android:textColor="@color/black"
                android:textSize="12sp" />


            <TextView
                android:id="@+id/tv_privacy_policy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@+id/tv_andthe"
                android:text="@string/privacy_policy"
                android:textColor="@color/colorBtnRed"
                android:textSize="12sp"
                android:textStyle="bold" />

        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>
